@startuml
!include theme.puml
title Identity database | Entity relationships
entity "institutions" as institution {
  * id : UUID <<PK>>
  --
  name
  slug : unique
}
entity "users" as user {
  * id : UUID <<PK>>
  institution_id : UUID <<FK, nullable>>
  --
  email : unique
  password_hash
  full_name
  role : enum
  is_active
  failed_login_attempts
  locked_until
}
entity "refresh_sessions" as refresh {
  * id : UUID <<PK>>
  * user_id : UUID <<FK>>
  institution_id : UUID <<FK, nullable>>
  --
  family_id : UUID
  token_hash
  expires_at
  revoked_at
}
entity "mfa_challenges" as mfa {
  * id : UUID <<PK>>
  * user_id : UUID <<FK>>
  institution_id : UUID <<FK, nullable>>
  --
  code_hash
  attempts
  expires_at
  consumed_at
}
entity "role_requests" as rolereq {
  * id : UUID <<PK>>
  * user_id : UUID <<FK>>
  institution_id : UUID <<FK, nullable>>
  decided_by : UUID <<FK, nullable>>
  --
  requested_role : enum
  status : enum
  justification
  decided_at
}
institution |o--o{ user : tenant
user ||--o{ refresh : rotates sessions
institution |o--o{ refresh : tenant
user ||--o{ mfa : login challenges
user ||--o{ rolereq : applies for a role
note bottom of user
Role: super_admin, admin, staff, student.
Tenantless platform accounts are possible.
RLS: users, refresh_sessions, mfa_challenges, role_requests.
Institution metadata has no RLS policy.
External modules store user UUIDs without FK access.
See generated dictionary for exact field types/defaults.
end note
legend bottom
  PK = primary key; FK = database-enforced local foreign key
  A nullable reference has a zero-or-one parent
  Diagram is a selected-field view, not complete DDL
endlegend
@enduml
